modified:   index.html

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             </fieldset>
         </form>
         <br>
-        <button id="start" >Launch</button>
-        <button id="stop" >Launch</button>
+        <button id="start" >Launch Signals</button>
+        <button id="stop" >Stop Signals</button>
         
 
     </main>
