modified:   index.html

--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
           tg.sendData(JSON.stringify({
            timestamp: Date.now(),
            userStart:userStart,
-           userInput: userInputNBC,
-           userInput: userInputCCI,
-           userInput: userInputM2,
-           userInput: userInputM3,
-           userInput: userInputM5,
-           userInput: userInputM10,
+           userInputNBC: userInputNBC,
+           userInputCCI: userInputCCI,
+           userInputM2: userInputM2,
+           userInputM3: userInputM3,
+           userInputM5: userInputM5,
+           userInputM10: userInputM10
           }));
         });
         
