--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         document.getElementById('start').addEventListener('click', () => {
           const userInputNBC = document.getElementById('NBC').value;
           const userInputCCI = document.getElementById('CCI').value;
-          const userTF = document.getElementById('TF').value;
+          const userTF = document.getElementById('TF').checked;
          
           const userStart = 1                 
           // const user = tg.initDataUnsafe.user; NOT SUPPORTED DURING INLINE BUTTON LAUNCH
