modified:   index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
            userStart:userStart,
            userInputNBC: userInputNBC,
            userInputCCI: userInputCCI,
-           userTF: userTF
+           userTFM2: userTFM2,
+           userTFM3: userTFM3,
+           userTFM5: userTFM5,
+           userTFM10: userTFM10,
            
           }));
         });
