--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h1>SETTINGS</h1>
         <form action="">
             <label for="NBC">Nombre de bougies  :</label>
-            <input type="text" id="NBC" placeholder="Nombre entre 6 et 30">
+            <input type="text" id="NBC" placeholder="Nombre entre 3 et 30">
             <br><br>
             <label for="CCI">Valeur minimum CCI :</label>
             <input type="text" id="CCI" placeholder="ex : 150 ">
@@ -92,6 +92,10 @@
                         
                     </div>
             </fieldset>
+            <br><br>
+            <label>
+             <input  type="checkbox" name="M2" id="TFM2" >M2
+            </label>
         </form>
         <br>
         <button id="start" >Launch Signals</button>
