--- a/index.html
+++ b/index.html
@@ -92,10 +92,11 @@
                         
                     </div>
             </fieldset>
-            <br><br>
+            <br>
             <label>
-             <input  type="checkbox" name="M2" id="TFM2" >M2
+             <input  type="checkbox" name="AI" id="AIChoose" >AI
             </label>
+            <br><br>
         </form>
         <br>
         <button id="start" >Launch Signals</button>
