--- a/index.html
+++ b/index.html
@@ -92,7 +92,10 @@
                         
                     </div>
             </fieldset>
-            
+            <br>
+            <label>
+             <input  type="checkbox" name="IA" id="IA" >IA
+            </label>
             <br><br>
         </form>
         <br>
